--- a/app/asset/js/angular-inline-text-editor/ite.css
+++ b/app/asset/js/angular-inline-text-editor/ite.css
@@ -8,8 +8,18 @@
   outline: none;
   position: relative;
   cursor: text;
-  padding: 6px 0px;
+  margin: 0px 5px;
+  padding: 5px 5px;
   min-width: 150px;
+  border-radius: 4px;
+  border: solid 1px #ccc;
+  background: #fff;
+  min-height: 34px;
+}
+
+.inline-text-editor:focus{
+  border-color: #66afe9;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
 [inline-text-editor][contentEditable]:empty:before {
