--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -46,7 +46,7 @@
 					<label class="label label-{{post.fApproved ? 'success' : 'warning'}}">{{post.fApproved ? ' Đã phê duyệt' : ' Chưa phê duyệt'}}</label>
 				</td>
 				<td>
-					{{post.created_at | date: "dd-MM-yyyy hh:mm:ss"}}</br>
+					{{post.created_at | date: "yyyy-MM-dd hh:mm:ss"}}</br>
 				</td>
 				<td>
 					<div class="dropdown">
