--- a/app/asset/js/angular-inline-text-editor/ite.css
+++ b/app/asset/js/angular-inline-text-editor/ite.css
@@ -10,6 +10,7 @@
   cursor: text;
   margin: 0px 5px;
   padding: 5px 5px;
+  max-width: 300px;
   min-width: 150px;
   border-radius: 4px;
   border: solid 1px #ccc;
