--- a/templates/header.html
+++ b/templates/header.html
@@ -4,8 +4,7 @@
 	<title>Test docx</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<style>
 		body {
 			font-family: "Times New Roman";
@@ -18,6 +17,12 @@
 		p {
 			margin: 0px;
 			padding: 0px;
+		}
+		sub {
+			font-size: 16px;
+		}
+		sup {
+			font-size: 16px;
 		}
 		table > * {
 			font-family: "Times New Roman";
@@ -72,4 +77,4 @@
 	</style>
 </head>
 <body>
-	<div class="container"></div>
+	<div class="container">
