template for excel, google maps

--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -382,7 +382,7 @@
 		<div class="form-group map-detail" ng-show="isSet(5)" style="padding-top: 30px;">
 			<div class="row">
 				<div class="col-sm-4">
-					<label>39. {{"land.hoSoPhanTichMauDat" | translate }}:</label>
+					<label>39. {{"land.ngayPhanTichMauDat" | translate }}:</label>
 					<select ng-model="date_ptmd" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
                         <option value="mm/yyyy">Mon/Year</option>
