--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,3 +1,5 @@
+<% let NULL_TIMES = global.myCustomVars.NULL_TIMES %>
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -65,6 +67,9 @@
 						return result;
 					}
 					else if (obj instanceof Date){
+						if (NULL_TIMES.indexOf(obj.getTime()) >= 0) {
+							return '';
+						}
 						let h = obj.getHours();
 						if (h == 2) {
 							return obj.getFullYear()
