--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -372,10 +372,12 @@
 			</div>
 			<div class="row" style="margin-top: 20px;">
 				<div class="col-sm-4">
+					<label>25. {{"pal.thongTinDiaTang" | translate }}<span class="has-required">(*)</span>:</label>
 					<input type="hidden" title="{{tooltips['thongTinDiaTang']}}" name="thongTinDiaTang" value="{{data.thongTinDiaTang}}" ng-bind="data.thongTinDiaTang">
 					<div type="text" inline-text-editor context-menu="contextMenu" id="thongTinDiaTang" ng-model="data.thongTinDiaTang" contentEditable class="inline-text-editor" title="{{tooltips['thongTinDiaTang']}}" name="thongTinDiaTang"></div>
+
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<label>26. {{"pal.thongTinDuAn" | translate }}<span class="has-required">(*)</span>:</label>
 					<input type="text" title="{{tooltips['thongTinDuAn']}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form form-control">
 				</div>
